tests/should_fail/question_mark_on_fn_non_option.nv
module main

// SHOULD FAIL: ? on a function return that is not Option
fn getInt() -> Int { return 42 }
let x = getInt()?
